[metadata]
name = playscript
version = 0.2.2
url = https://github.com/satamame/playscript
author = satamame
author-email = satamame@gmail.com
license = MIT
license_file = LICENSE
description = playscript - Structure for Play Scripts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = theater, play, script, dialogue
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
install_requires =
    fountain @ git+git://github.com/Tagirijus/fountain.git@7da5447abae640f34448dd36fee83f47a7415fcf
python_requires = ~= 3.8

[options.packages.find]
where = src
